<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.projectx.toolx.metal_detector"
    android:background="#ff22e024">

        <TextView
            android:id="@+id/xTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:textSize="8pt" />

        <TextView
            android:id="@+id/yTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:textSize="8pt" />

        <TextView
            android:id="@+id/zTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:textSize="8pt" />

        <TextView
            android:id="@+id/progress_bar_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="3dip"
            android:text="@string/magneticField"
            android:textSize="8pt"
            android:textColor="#ffffff2e" />

    <LinearLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="left"
                android:padding="3dip"
                android:text="@string/low"
                android:textSize="6pt"
                android:textColor="#ffffff2e" />

            <ProgressBar
                android:id="@+id/progress_bar"
                style="@android:style/Widget.ProgressBar.Horizontal"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginRight="5dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:layout_gravity="right"
                android:padding="3dip"
                android:text="@string/high"
                android:textSize="6pt"
                android:textColor="#ffffff2e" />
        </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/textView7"
        android:text=" "
        android:textColor="#ffffff2e" />

</LinearLayout>

